--- a/package.json
+++ b/package.json
@@ -2,13 +2,33 @@
   "name": "@pages-routing-test/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build:all": "nx run-many --target=build --all",
+    "build:demo": "nx build demo",
+    "build:shared": "nx build shared",
+    "build:affected": "nx affected --target=build",
+    "lint:all": "nx run-many --target=lint --all",
+    "lint:demo": "nx lint demo",
+    "lint:shared": "nx lint shared",
+    "lint:affected": "nx affected --target=lint",
+    "serve:demo": "nx serve demo",
+    "test:all": "nx run-many --target=test --all",
+    "test:demo": "nx test demo",
+    "test:shared": "nx test shared",
+    "test:affected": "nx affected --target=test",
+    "type-check:all": "nx run-many --target=type-check --all",
+    "type-check:demo": "nx run demo:type-check",
+    "type-check:shared": "nx run shared:type-check",
+    "type-check:affected": "nx affected --target=type-check"
+  },
   "private": true,
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
@@ -31,6 +51,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
@@ -45,6 +66,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "20.1.4",
+    "pnpm": "^9.12.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
@@ -54,7 +76,6 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1",
-    "pnpm": "^9.12.2"
+    "vitest": "^1.3.1"
   }
 }
