--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@pages-routing-test/shared": ["libs/shared/src/index.ts"],
+      "@pages-routing-test/shared": ["libs/shared/src"], // Updated to point to directory
       "@pages-routing-test/shared/*": ["libs/shared/src/*"]
     }
   },
