feat: implement client-side routing with HashRouter and update project homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@pages-routing-test/source",
   "version": "0.0.0",
   "license": "MIT",
+  "homepage": "https://cambridgemonorail.github.io/pages-routing/",
   "scripts": {
     "build:all": "nx run-many --target=build --all",
     "build:demo": "nx build demo",
