--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
@@ -97,6 +98,7 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
